--- a/scss/parts/_product.scss
+++ b/scss/parts/_product.scss
@@ -101,6 +101,15 @@
 }
 
 @media (max-width: 767px) {
+	.product-wrap {
+		gap: 0;
+		padding-bottom: 120px;
+	}
+
+	.product-image {
+		margin-top: 60px;
+	}
+
 	.product-text__title {
 		font-size: 28px;
 
@@ -114,6 +123,8 @@
 	}
 
 	.product-card {
-		padding: 16px 20px 6px 60px;
+		padding: 16px 20px 6px 20px;
+		bottom: -80px;
+		left: 30px;
 	}
 }
