--- a/scss/parts/_work.scss
+++ b/scss/parts/_work.scss
@@ -153,6 +153,11 @@
 		max-width: 320px;
 	}
 
+	.step-02 > .step__title::before {
+		top: -134px;
+		left: -45px;
+	}
+
 	.step-02,
 	.step-03 {
 		margin-top: 100px;
